tests/bad/31/test.scm
(letrec ((f (lambda (x) (+ x z))))
  f)